--- a/package.json
+++ b/package.json
@@ -30,10 +30,6 @@
     "@infernus/streamer": "workspace:^",
     "@infernus/types": "workspace:^",
     "@inquirer/prompts": "^8.0.1",
-    "@rollup/plugin-commonjs": "^29.0.0",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.3",
-    "@rollup/plugin-typescript": "^12.3.0",
     "@types/node": "^22.19.1",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
@@ -47,12 +43,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.6.2",
-    "rollup": "^4.53.3",
-    "rollup-plugin-delete": "^3.0.1",
-    "rollup-plugin-dts": "^6.2.3",
-    "rollup-plugin-esbuild": "^6.2.1",
-    "rollup-plugin-node-externals": "^8.1.2",
-    "rollup-plugin-typescript-paths": "^1.5.0",
+    "rolldown": "1.0.0-beta.59",
+    "rolldown-plugin-dts": "^0.20.0",
     "tslib": "^2.8.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
