--- a/package.json
+++ b/package.json
@@ -24,31 +24,30 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@eslint/js": "^9.39.1",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "@eslint/js": "^9.39.2",
     "@infernus/streamer": "workspace:^",
     "@infernus/types": "workspace:^",
-    "@inquirer/prompts": "^8.0.1",
-    "@types/node": "^22.19.1",
-    "@typescript-eslint/eslint-plugin": "^8.47.0",
-    "@typescript-eslint/parser": "^8.47.0",
+    "@inquirer/prompts": "^8.2.0",
+    "@types/node": "^25.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
+    "@typescript-eslint/parser": "^8.53.1",
     "all-contributors-cli": "^6.26.1",
-    "bumpp": "^10.3.1",
+    "bumpp": "^10.4.0",
     "conventional-changelog-cli": "^5.0.0",
-    "esbuild": "^0.27.0",
-    "eslint": "^9.39.1",
-    "execa": "^9.6.0",
-    "globals": "^16.5.0",
+    "eslint": "^9.39.2",
+    "execa": "^9.6.1",
+    "globals": "^17.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "prettier": "^3.6.2",
-    "rolldown": "1.0.0-beta.59",
-    "rolldown-plugin-dts": "^0.20.0",
+    "prettier": "^3.8.1",
+    "rolldown": "^1.0.0-rc.1",
+    "rolldown-plugin-dts": "^0.21.6",
     "tslib": "^2.8.1",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.47.0",
-    "vitepress": "^1.6.4"
+    "typescript-eslint": "^8.53.1",
+    "vitepress": "^2.0.0-alpha.15"
   }
 }
